api heartbeat
